Поправлены описания и тест-кейсы

--- a/Описания тест-кейсов/Авторизация.md
+++ b/Описания тест-кейсов/Авторизация.md
@@ -11,4 +11,5 @@
 5) Дождаться входа
 
 Ожидаемый результат:
-- **Редирект на страницу новостей авторизовавшегося пользователя - https://vk.com/feed.**
+- **1)Редирект на страницу новостей авторизовавшегося пользователя - https://vk.com/feed.**
+- **2)Редирект на страницу входа с уведомлением о неправильности данных.**
